# solana-template

./: .gitignore  Anchor.toml  CHANGELOG.md  package.json  tsconfig.json
.github/workflows/: test.yml
evm/: .gitignore  package.json
evm/contracts/: BaryonPad.sol  Starship.sol
evm/contracts/lib/: Token.sol
programs/hello-world/: Cargo.toml
programs/hello-world/src/: lib.rs
programs/lunapad/: Cargo.toml
programs/lunapad/src/: constants.rs  lib.rs  shared.rs
programs/starship/: Cargo.toml
programs/starship/src/: anchor_spl.rs  anchor_sys_program.rs  coin98_vault.rs  constant.rs  constants.rs  context.rs  error.rs  event.rs  events.rs  lib.rs  shared.rs  spl_token.rs  state.rs  util.rs  utils.rs
programs/starship/src/events/: create_launchpad.rs  launchpad.rs  mod.rs
programs/starship/src/instructions/: admin.rs  create_sale_standard.rs  init.rs  mod.rs
programs/starship/src/state/: admin.rs  launchpad.rs  mod.rs  sale_standard.rs
programs/starship/tests/: blacklist.rs  redeem_sol.rs  redeem_token.rs  register.rs  set_launchpad.rs  starship.rs  withdraw.rs
programs/starship/tests/framework/: account.rs  context.rs  merkle_tree.rs  spl_token.rs
programs/starship/tests/program/: client.rs  mod.rs  test_context.rs  whitelist.rs
programs/starship/tests/utils/: helpers.rs  instructions.rs
services/: index.ts  starship.service.ts  starship_instruction.service.ts
solana/: .gitignore
solana/programs/starship/: Cargo.toml
solana/programs/starship/src/: constant.rs  lib.rs
solana/programs/starship/tests/: redeem_token.rs
solana/services/: starship.service.ts
tests/: 01_launchpad.spec.ts  02_profile.spec.ts  03_redeem.spec.ts  coin98_starship.keypair.json  launchpad.spec.ts  utils.ts
tests/default/: id.json
