[package]
name = "hello-world"
version = "1.0.0"
authors = ["hieuvq98"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "hello_world"
crate-type = ["cdylib", "lib"]

[features]
cpi = ["no-entrypoint"]
default = []
devnet = []
mainnet = []
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = "0.29.0"
arrayref = "~0.3.6"
num_enum = "0.7.2"
solana-program = "1.17.16"

[dev-dependencies]
rand = "~0.8.5"
solana-cli-config = "1.17.16"
solana-program-test = "1.17.16"
solana-sdk = "1.17.16"
tokio = "1.35.1"
# dependency fix
proc-macro-crate = "3.0.0"
security-framework = "2.9.2"
time = "~0.3.15"
zstd-sys = "~2.0.4+zstd.1.5.2"
