[package]
name = "coin98-lunapad"
version = "1.0.0"
authors = ["lukaz"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
anchor-lang = "0.13.2"
anchor-spl = "0.13.2"
solana-program = "1.7.8"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []

[lib]
name = "lunapad"
crate-type = ["cdylib", "lib"]
