[package]
name = "coin98-starship"
version = "1.0.0"
authors = ["lukaz"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
anchor-lang = "0.24.2"
arrayref = "0.3.6"
num_enum = "0.5.4"
solana-program = "1.9.13"

[dev-dependencies]
env_logger="~0.9.0"
solana-program-test = "~1.9.15"
solana-sdk = "~1.9.15"
solana-cli-config = "1.9.5"
anchor-client = "~0.24.2"
mpl-testing-utils= "0.0.2"
rand = "0.8.5"
spl-associated-token-account = { version = "~1.0.3",  features = ["no-entrypoint"] }
spl-token = { version = "~3.2",  features = ["no-entrypoint"] }

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []

[lib]
name = "starship"
crate-type = ["cdylib", "lib"]

